--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h2>Get in Touch</h2>
       <h3>If you love hotwings as much i do</h3>
       <p class="para">I love chicken leg piece and chicken dum biryani.</p>
-      <a class="contact" href="prakashchater@gmail.com">My Contact</a>
+      <a class="btn" href="prakashchater@gmail.com">My Contact</a>
     </div>
   </div>
  
